--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
   "editor.defaultFormatter": "esbenp.prettier-vscode",
   "prettier.tabWidth": 2,
   "editor.tabSize": 2,
+  "editor.formatOnSave": true,
   "[typescript]": {
     "editor.formatOnSave": true
   }
